# lawpy

./: .env.example  .gitignore  CONTRIBUTING.md  CONVENTIONS.md  README.md  implementation_plan.md  pyproject.toml  task.md
.agent/: MEMORY.md  NOTES.md  PRECEDENT_API_SPEC.md  STATUS.md  TASKS.md
.github/workflows/: api-drift.yml  ci.yml  release.yml
docs/: ai-usage.md
docs/kr/: e-group-root-keys.md  generated-coverage.md  public-wrapper-policy.md
scripts/: codegen.py  probe_e_group.py  probe_root_keys.py  scrape_specs.py  spec_diff.py
specs/kr/: _index.json  _root_keys.json  acrInfoGuide.json  acrListGuide.json  admrulBylListGuide.json  admrulInfoGuide.json  admrulListGuide.json  admrulOldAndNewInfoGuide.json  admrulOldAndNewListGuide.json  aiRltLsGuide.json  aiSearchGuide.json  baiPvcsInfoGuide.json  baiPvcsListGuide.json  cgmExpcDapaInfoGuide.json  cgmExpcDapaListGuide.json  cgmExpcKcgInfoGuide.json  cgmExpcKcgListGuide.json  cgmExpcKcsInfoGuide.json  cgmExpcKcsListGuide.json  cgmExpcKdcaInfoGuide.json  cgmExpcKdcaListGuide.json  cgmExpcKfsInfoGuide.json  cgmExpcKfsListGuide.json  cgmExpcKhsInfoGuide.json  cgmExpcKhsListGuide.json  cgmExpcKipoInfoGuide.json  cgmExpcKipoListGuide.json  cgmExpcKmaInfoGuide.json  cgmExpcKmaListGuide.json  cgmExpcKostatInfoGuide.json  cgmExpcKostatListGuide.json  cgmExpcMafraInfoGuide.json  cgmExpcMafraListGuide.json  cgmExpcMcstInfoGuide.json  cgmExpcMcstListGuide.json  cgmExpcMeInfoGuide.json  cgmExpcMeListGuide.json  cgmExpcMfdsInfoGuide.json  cgmExpcMfdsListGuide.json  cgmExpcMmaInfoGuide.json  (+157 more)
src/lawpy/: __init__.py  client.py  exceptions.py  help.py  kr.py  models.py
tests/: test_api_drift_workflow.py  test_codegen.py  test_help.py  test_kr.py  test_kr_administrative_review_decision.py  test_kr_administrative_rule.py  test_kr_annex_form.py  test_kr_committee_decision.py  test_kr_constitutional_decision.py  test_kr_law_reference.py  test_kr_legal_interpretation.py  test_kr_legal_knowledge_base.py  test_kr_legal_terminology.py  test_kr_malformed_response_handling.py  test_kr_method_specs.py  test_kr_ministry_interpretation.py  test_kr_ordinance.py  test_kr_precedent.py  test_kr_school_public_rule.py  test_kr_treaty.py  test_probe_cli.py  test_probe_e_group.py  test_probe_runner.py  test_probe_verify.py  test_scrape_specs.py  test_spec_diff.py
tests/test_generated/: test_acr.py  test_acrSpecialDecc.py  test_adapSpecialDecc.py  test_admbyl.py  test_admrul.py  test_admrulOldAndNew.py  test_aiRltLs.py  test_aiSearch.py  test_baiPvcs.py  test_couseAdmrul.py  test_couseLs.py  test_couseOrdin.py  test_dapaCgmExpc.py  test_decc.py  test_detc.py  test_dlytrm.py  test_dlytrmRlt.py  test_drlaw.py  test_ecc.py  test_eflaw.py  test_eflawjosub.py  test_eiac.py  test_elaw.py  test_expc.py  test_fsc.py  test_ftc.py  test_iaciac.py  test_joRltLstrm.py  test_kcc.py  test_kcgCgmExpc.py  test_kcsCgmExpc.py  test_kdcaCgmExpc.py  test_kfsCgmExpc.py  test_khsCgmExpc.py  test_kipoCgmExpc.py  test_kmaCgmExpc.py  (+62 more)
(+35 files in other folders)
